src/objects/Template_Apt__c.object
<CustomObject>
    <description>Table that holds an appointment record assigned to a schedule template. A single schedule template can hold any number of appointment records.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if an apointment block is still active on the calendar</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Color_Code__c</fullName>
        <description>The background color for this appointment on the calendar.</description>
        <label>Color Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Light Blue</fullName>
                    <default>true</default>
                    <label>Light Blue</label>
                </value>
                <value>
                    <fullName>Light Purple</fullName>
                </value>
                <value>
                    <fullName>Light Brown</fullName>
                </value>
                <value>
                    <fullName>Light Red</fullName>
                </value>
                <value>
                    <fullName>Light Green</fullName>
                </value>
                <value>
                    <fullName>Light Grey</fullName>
                </value>
                <value>
                    <fullName>Light Yellow</fullName>
                </value>
                <value>
                    <fullName>Light Orange</fullName>
                </value>
                <value>
                    <fullName>Network Purple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ending_Hour__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>The hour (in military time) that the appointment ends</description>
        <label>Ending Hour</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ending_Minutes__c</fullName>
        <defaultValue>&quot;00&quot;</defaultValue>
        <description>The minutes mark that the appointment will end on</description>
        <label>Ending Minutes</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Screen_Type__c</fullName>
        <description>Indicates the Pre-Screen restrictions for a given appointment type</description>
        <label>Pre-Screen Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green/Yellow</fullName>
                    <default>true</default>
                    <label>Green/Yellow</label>
                </value>
                <value>
                    <fullName>Green/Yellow Only</fullName>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>Red/Blue Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule_Template__c</fullName>
        <description>The scheduling template that the appointment block is a member of</description>
        <label>Schedule Template</label>
        <referenceTo>Schedule_Templates__c</referenceTo>
        <relationshipLabel>Template Apts</relationshipLabel>
        <relationshipName>Template_Apts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Special_Initiative__c</fullName>
        <description>The special initiative this consult block is designated for.</description>
        <label>Special Initiative</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Firm Appt Date</fullName>
                </value>
                <value>
                    <fullName>Group Consult</fullName>
                </value>
                <value>
                    <fullName>Hard Stop</fullName>
                </value>
                <value>
                    <fullName>Orange Crush</fullName>
                </value>
                <value>
                    <fullName>Ruby Red</fullName>
                </value>
                <value>
                    <fullName>Wait List</fullName>
                </value>
                <value>
                    <fullName>White Glove</fullName>
                </value>
                <value>
                    <fullName>Workshop</fullName>
                </value>
                <value>
                    <fullName>V2</fullName>
                </value>
                <value>
                    <fullName>V2 GY ONLY</fullName>
                </value>
                <value>
                    <fullName>Red Rally</fullName>
                </value>
                <value>
                    <fullName>Double Decker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Hour__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>The hour (military time) that the appointment starts</description>
        <label>Start Hour</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Min_Int__c</fullName>
        <description>Integer value of the starting minutes</description>
        <formula>Value( Starting_Minutes__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Min Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Starting_Hour_Int__c</fullName>
        <description>Integer value of the starting hour.</description>
        <formula>value(Start_Hour__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Starting Hour Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Starting_Minutes__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>Table that holds an appointment record assigned to a schedule template. A single schedule template can hold any number of appointment records.</description>
        <label>Starting Minutes</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Template Apt</label>
    <nameField>
        <displayFormat>Apt-{0}</displayFormat>
        <label>Template Apt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Apts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>